mobile overflow-x problem fixed

--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,9 @@ h2 {
   line-height: 44px;
 }
 
-
+.wrapper {
+  overflow-x: hidden;
+}
 
 @media screen and (max-width: 768px) {
   h1 {
